<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_marginHorizontal="@dimen/padding_regular"
        android:layout_marginTop="@dimen/padding_regular"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />



    <ScrollView
        android:id="@+id/article_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/subheading"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_subheading"
                android:textAppearance="@style/TextAppearance.AppCompat" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/article_img"
                    android:layout_width="wrap_content"
                    android:layout_height="248dp"
                    android:padding="@dimen/padding_regular"
                    android:contentDescription="@string/article_image"
                    android:src="@drawable/article_img2"/>
                <TextView
                    android:id="@+id/article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/article_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/btnComment"
                    android:onClick="changeImage"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>